# ox_sensor_test

./: CMakeCache.txt  CMakeLists.txt  README.md  main.c
examples/: CMakeLists.txt  EPD_Test.h  Pico-RS232_test.c
lib/Config/: DEV_Config.c  DEV_Config.h
tools/: down.py
